--- a/.github/workflows/codegen.yml
+++ b/.github/workflows/codegen.yml
@@ -1,4 +1,4 @@
-name: Automatically create go code to interact with the API
+name: Go code from specs
 on: push
 
 env:
@@ -6,7 +6,7 @@ env:
 
 jobs:
   run:
-    name: Generate code go to interact with the API described in openapi.json
+    name: Go code from specs in openapi.json
     runs-on: ubuntu-latest
     steps:
       - name: Set file path
