--- a/.github/workflows/codegen.yml
+++ b/.github/workflows/codegen.yml
@@ -2,7 +2,7 @@ name: Go code from specs
 on: push
 
 concurrency:
-  group: ${{ github.workflow }}
+  group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
 
 env:
