--- a/.github/workflows/codegen.yml
+++ b/.github/workflows/codegen.yml
@@ -1,5 +1,8 @@
 name: Go code from specs
-on: push
+on:
+  push:
+    branches:
+      - main
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -28,13 +31,25 @@ jobs:
         run: echo "HI $API_SPECS_CHANGED $FILE_PATH"
 
       - name: Set up Node.js
+        if: ENV.API_SPECS_CHANGED
         uses: actions/setup-node@v3
 
       - name: Remove previously generated code
+        if: ENV.API_SPECS_CHANGED
         run: cd gen && xargs rm -rf < .openapi-generator/FILES && cd ..
 
       - name: Generate go code from specs
+        if: ENV.API_SPECS_CHANGED
         run: npx @openapitools/openapi-generator-cli generate -i $FILE_PATH -g go --additional-properties=generateInterfaces=true,hideGenerationTimestamp=true,isGoSubmodule=true,packageName=openapi -o gen
 
-      - name: Commit changes
-        uses: EndBug/add-and-commit@v9
+      - name: Create pull request
+        if: ENV.API_SPECS_CHANGED
+        uses: peter-evans/create-pull-request@v5
+        with:
+          commit-message: feat(MarloweAPIClient):api client update
+          title: Update MarloweAPIClient to match OpenAPI specs
+          body: |
+            This PR updates the MarloweAPIClient project based on the specs described in `openapi.json`
+            To check if this newly generated code is functional, run `go build` in the root folder of the project.
+
+          branch: api-client-codegen
