--- a/.github/workflows/codegen.yml
+++ b/.github/workflows/codegen.yml
@@ -8,9 +8,6 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
 
-env:
-  FILE_PATH: openapi.json
-
 jobs:
   run:
     name: Go code from specs in openapi.json
@@ -25,7 +22,7 @@ jobs:
           fetch-depth: 5
 
       - name: Check if running the action is needed.
-        run: echo "API_SPECS_CHANGED=$(git diff --name-only HEAD HEAD~1 | grep $FILE_PATH)" >> "$GITHUB_ENV"
+        run: echo "API_SPECS_CHANGED=$(git diff --name-only HEAD HEAD~1 | grep ^$FILE_PATH$)" >> "$GITHUB_ENV"
 
       - name: Show variables
         run: echo "HI $API_SPECS_CHANGED $FILE_PATH"
